--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "consolidate": "^0.16.0",
     "ejs": "^3.1.8",
     "ejs-lint": "^1.2.2",
+    "env": "^0.0.2",
     "express": "^4.18.1",
     "firebase": "^9.8.1",
     "handlebars": "^4.7.7",
     "html": "^1.0.0",
-    "https": "^1.0.0",
+    "ht tps": "^1.0.0",
     "nodemon": "^2.0.16",
     "swig": "^0.14.0"
   }
