--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.9.0",
+    "dompurify": "^2.4.1",
     "ejs": "^3.1.8",
     "ejs-lint": "^1.2.2",
     "env": "^0.0.2",
     "express": "^4.18.1",
-    "mongodb": "^4.12.1",
+    "jsdom": "^20.0.3",
+    "marked": "^4.2.4",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.8.0",
     "nodemon": "^2.0.20",
-    "swig": "^0.14.0"
+    "slugify": "^1.6.5"
   }
 }
