--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
     "bootstrap-icons": "^1.9.0",
     "ejs": "^3.1.8",
     "ejs-lint": "^1.2.2",
-    "env": "^0.0.2",
     "express": "^4.18.1",
-    "mongodb": "^4.12.1",
-    "nodemon": "^2.0.20",
-    "swig": "^0.14.0"
+    "nodemon": "^2.0.20"
   }
 }
